# IsThisStockGood

./: .gitignore  README.md  app.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt  run_all_tests.py  run_locally.sh  test_api.py
.circleci/: config.yml
.github/workflows/: python-app.yml
app/: Controller.py  MSNMoney.py  Morningstar.py  RuleOneInvestingCalculations.py
css/: style.css
isthisstockgood/: CompanyInfo.py  DataFetcher.py  server.py
isthisstockgood/Active/: MSNMoney.py  YahooFinance.py  Zacks.py
isthisstockgood/Obsolete/: StockRow.py
isthisstockgood/templates/: home.html  loading.html  margin_of_safety.html  meaning.html  searchbox.html  ten_cap.html
src/: DataFetcher.py  MSNMoney.py  Morningstar.py  RuleOneInvestingCalculations.py  StockRow.py  YahooFinance.py
src/Active/: MSNMoney.py  YahooFinance.py  YahooFinanceChart.py
src/templates/: base.html  home.html  loading.html  management.html
templates/: base.html  footer.html  header.html  home.html  management.html  margin_of_safety.html  market_cap.html  meaning.html  meaning_tooltip.txt  moat.html  payback_time.html  resources.html  searchbox.html
templates/js/: search.js
templates/json/: big_five_numbers.json  error.json  stock_data.json
templates/txt/: management_tooltip.txt  margin_of_safety_tooltip.txt  market_cap_tooltip.txt  (+3 more)
testdata/: dummy_morningstar_key_ratios.csv  dummy_yahoo_finance_analysis.html
tests/: DataFetcher.py  MSNMoney.py  RuleOneInvestingCalculationsTest.py  test_DataSources.py  test_MSNMoney.py  test_RuleOneInvestingCalculations.py  test_api.py
(+5 files in other folders)
