[tool.poetry]
name = "isthisstockgood"
version = "0.1.0"
description = ""
authors = ["Patryk Kocielnik <patryk@kocielnik.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
lxml = "4.9.1"
requests-futures = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
