[tool.poetry]
name = "isthisstockgood"
version = "0.1.0"
description = ""
authors = ["Patryk Kocielnik <patryk@kocielnik.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.3"
requests-futures = "^1.0.1"
wheel = "^0.43.0"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
